--- a/validate_models_inference.ipynb
+++ b/validate_models_inference.ipynb
@@ -17,13 +17,6 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Seed set to 42\n"
-     ]
-    },
-    {
      "data": {
       "text/plain": [
        "'kamel-usp/aes_enem_models-sourceA-ordinal-from-bertimbau-base-C1'"
@@ -39,14 +32,12 @@
     "from datasets import load_dataset, DatasetDict, Dataset\n",
     "from transformers import AutoModelForSequenceClassification, AutoTokenizer\n",
     "from sklearn.metrics import accuracy_score, cohen_kappa_score, mean_squared_error\n",
-    "import pytorch_lightning as pl\n",
     "import torch\n",
     "from tqdm.auto import tqdm\n",
     "import pandas as pd\n",
     "from coral_pytorch.dataset import corn_label_from_logits\n",
     "\n",
     "\n",
-    "RANDOM_SEED = 42\n",
     "REFERENCE_CONCEPT = 0\n",
     "OBJECTIVE = \"ordinal\"\n",
     "MAX_LENGTH = 512\n",
@@ -56,8 +47,6 @@
     "BASE_MODEL = \"bertimbau\" #bertimbau/sourceB-mlm/sourceB-ordinal\n",
     "MODEL_NAME = f\"kamel-usp/aes_enem_models-sourceA-ordinal-from-{BASE_MODEL}-{VARIANT}-C{REFERENCE_CONCEPT+1}\"\n",
     "\n",
-    "pl.seed_everything(RANDOM_SEED)\n",
-    "torch.set_float32_matmul_precision('medium')\n",
     "MODEL_NAME"
    ]
   },
@@ -65,9 +54,108 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "dc81f3dc42de4856b64d38de47f6efce",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Downloading data files:   0%|          | 0/1 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "5d87aa60de6045c6ba5f0053002c4164",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Downloading data:   0%|          | 0.00/71.6M [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "25ce669b10d24f3ea76d6bc90837eefa",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Extracting data files:   0%|          | 0/1 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "1e15d0ff58df43238172c483c4f2a796",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Parsing HTML files from: sourceAWithGraders:   0%|          | 0/44 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "51c99c3119e745e7b064b2cdf9af65aa",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Generating train split: 0 examples [00:00, ? examples/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "f0e0c237ae584ee3afc34a30b39f1e16",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Generating validation split: 0 examples [00:00, ? examples/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "f0696c51d0d84916b54a3fefa8172cd3",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Generating test split: 0 examples [00:00, ? examples/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
-    "dataset = load_dataset(\"kamel-usp/aes_enem_dataset\", \"sourceAWithGraders\", cache_dir=\"/tmp/aes_enem\")"
+    "dataset = load_dataset(\"kamel-usp/aes_enem_dataset\", \"sourceAWithGraders\", cache_dir=\"/tmp/aes_enem2\")"
    ]
   },
   {
@@ -107,7 +195,50 @@
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "4e000588938749198b05f9c5116d7083",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Map:   0%|          | 0/744 [00:00<?, ? examples/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "bfb897eda77d48eab2c63e8d76a2a63d",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Map:   0%|          | 0/195 [00:00<?, ? examples/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "b185f60d65f7465387942bf6f2dfed61",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Map:   0%|          | 0/216 [00:00<?, ? examples/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "grade_mapping = {\n",
     "    0: 0,\n",
@@ -167,7 +298,36 @@
    "cell_type": "code",
    "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "177743ffc09a471b91192c73c993917c",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "config.json:   0%|          | 0.00/1.15k [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "87deee75bc5d4c798ecc18e6a478bbae",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "model.safetensors:   0%|          | 0.00/436M [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "tokenizer = AutoTokenizer.from_pretrained(TOKENIZER_NAME, use_fast=True)\n",
     "def get_model_instance(model_path, objective):\n",
@@ -181,7 +341,7 @@
     "    elif objective == \"classification\" or objective == \"ordinal\":\n",
     "        model = AutoModelForSequenceClassification.from_pretrained(\n",
     "                model_path, \n",
-    "                cache_dir=\"/tmp/\", \n",
+    "                cache_dir=\"/tmp/aes_enem2\", \n",
     "                num_labels=6,\n",
     "            )\n",
     "    return model\n",
@@ -257,7 +417,8 @@
     "        return corn_label_from_logits(output.logits)\n",
     "        \n",
     "def get_predictions_and_labels(model, dataloader):\n",
-    "    device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
+    "    # device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
+    "    device = \"cpu\"\n",
     "    model.to(device)\n",
     "    all_predictions = []\n",
     "    all_true_labels = []\n",
@@ -299,7 +460,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d0d8b11230d544b69d78a75ae24a07c0",
+       "model_id": "0fb82b1f10774be1bcd961ea967756ef",
        "version_major": 2,
        "version_minor": 0
       },
@@ -386,13 +547,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "6084f715ecaa469abc0b2e94f4576517",
+       "model_id": "7daffbf2eb2644fd95d4979e0ada066e",
        "version_major": 2,
        "version_minor": 0
       },
@@ -462,7 +623,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "3a79808aad4746f5b629cf0089db682e",
+       "model_id": "a52a83d6e1134b4aaf78136d8244686e",
        "version_major": 2,
        "version_minor": 0
       },
@@ -532,8 +693,9 @@
    ],
    "source": [
     "model.eval()\n",
-    "display(compute_metrics(model, data_test, \"full\"))\n",
-    "display(compute_metrics(model, data_test_easy, \"easy\"))"
+    "with torch.no_grad():\n",
+    "    display(compute_metrics(model, data_test, \"full\"))\n",
+    "    display(compute_metrics(model, data_test_easy, \"easy\"))"
    ]
   },
   {
