update files to help with non determinism

--- a/validate_models_inference.ipynb
+++ b/validate_models_inference.ipynb
@@ -34,10 +34,13 @@
     "from sklearn.metrics import accuracy_score, cohen_kappa_score, mean_squared_error\n",
     "import torch\n",
     "from tqdm.auto import tqdm\n",
+    "import numpy as np\n",
+    "import random\n",
     "import pandas as pd\n",
     "from coral_pytorch.dataset import corn_label_from_logits\n",
+    "torch.use_deterministic_algorithms(True)\n",
     "\n",
-    "\n",
+    "RANDOM_SEED = 42\n",
     "REFERENCE_CONCEPT = 0\n",
     "OBJECTIVE = \"ordinal\"\n",
     "MAX_LENGTH = 512\n",
@@ -46,6 +49,7 @@
     "TOKENIZER_NAME = f\"neuralmind/bert-{VARIANT}-portuguese-cased\"\n",
     "BASE_MODEL = \"bertimbau\" #bertimbau/sourceB-mlm/sourceB-ordinal\n",
     "MODEL_NAME = f\"kamel-usp/aes_enem_models-sourceA-ordinal-from-{BASE_MODEL}-{VARIANT}-C{REFERENCE_CONCEPT+1}\"\n",
+    "torch.manual_seed(RANDOM_SEED)\n",
     "\n",
     "MODEL_NAME"
    ]
@@ -96,6 +100,31 @@
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'id': '7.html',\n",
+       " 'id_prompt': 'patrimonio-historico-e-cultural-brasileiro-um-caso-de-descaso',\n",
+       " 'essay_title': 'Incêndio do Museu Histórico Nacional: a política de dominação secular',\n",
+       " 'essay_text': 'O Ministério da Cultura não está nem um pouco preocupado com a preservação do patrimônio público, o incêndio do Museu Histórico Nacional é a grande confirmação deste fato. Entre as 350 mil peças do vasto acervo, restou muito pouco do conhecimento científico existente, vai que entre os manuscritos tivesse uma árvore genealógica explicando o desenvolvimento psicomotor da criança, e que ali alguns professores de escolas públicas que estivessem preocupados com as questões sociais do país, levassem seus alunos e fizessem estes compreenderem a situação educacional do Brasil? Juntos, eles podem compreender que Componentes curriculares como a Educação física e a Artes e Educação são essenciais para a formação das crianças na Educação Infantil (0 a 5 anos e 11 meses), permitindo que os discentes tenham acesso à alfabetização. Descobrir que estes componentes curriculares trabalham as habilidades motoras básicas manipulativas (apanhar, lançar...) e locomotoras (correr, saltar...) que são fundamentais para a estruturação do corpo, pois a criança precisa ter a lateralidade (noção de lado direito e esquerdo, haja vista que, tanto a leitura, como a escrita, quanto o cálculo são realizados da esquerda para direita) estruturada, saber fazer a reversibilidade, ou seja, se colocar no ponto de vista do outro, no caso o caderno, para assim fazer a escrita, a leitura e o cálculo. Contudo isso, os professores e alunos da rede pública devem, de forma organizada, pedir a inclusão destes componentes curriculares na teoria e na prática, permitindo a emancipação de uma classe social que atualmente está sendo vítima de uma ordem social vigente, deixando estes como seres puramente biológicos e não sociais e culturais.',\n",
+       " 'grades': [0, 0, 0, 0, 0, 0],\n",
+       " 'essay_year': 2018}"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dataset[\"test\"][0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
    "outputs": [],
    "source": [
     "grade_mapping = {\n",
@@ -116,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -144,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -154,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -181,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -213,23 +242,73 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
-    "data_train = DataLoader(\n",
-    "    dataset_tokenized[\"train\"].with_format(\"torch\"), batch_size=BATCH_SIZE, shuffle=True, num_workers=0\n",
-    ")\n",
-    "data_val = DataLoader(dataset_tokenized[\"validation\"].with_format(\"torch\"), batch_size=BATCH_SIZE, shuffle=False, num_workers=0)\n",
-    "data_test = DataLoader(dataset_tokenized[\"test\"].with_format(\"torch\"), batch_size=BATCH_SIZE, shuffle=False, num_workers=0)\n",
-    "\n",
-    "data_test_easy = DataLoader(dataset_tokenized[\"test_easy\"].with_format(\"torch\"), batch_size=BATCH_SIZE, shuffle=False, num_workers=0)\n",
-    "data_test_hard = DataLoader(dataset_tokenized[\"test_hard\"].with_format(\"torch\"), batch_size=BATCH_SIZE, shuffle=False, num_workers=0)"
+    "def seed_worker(worker_id):\n",
+    "    worker_seed = torch.initial_seed() % 2**32\n",
+    "    np.random.seed(worker_seed)\n",
+    "    random.seed(worker_seed)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "g = torch.Generator()\n",
+    "g.manual_seed(RANDOM_SEED)\n",
+    "\n",
+    "data_train = DataLoader(\n",
+    "    dataset_tokenized[\"train\"].with_format(\"torch\"), batch_size=BATCH_SIZE, shuffle=True, num_workers=0,\n",
+    "    worker_init_fn=seed_worker,\n",
+    "    generator=g\n",
+    ")\n",
+    "data_val = DataLoader(dataset_tokenized[\"validation\"].with_format(\"torch\"), batch_size=BATCH_SIZE,\n",
+    "                       shuffle=False, num_workers=0,worker_init_fn=seed_worker,generator=g)\n",
+    "data_test = DataLoader(dataset_tokenized[\"test\"].with_format(\"torch\"), batch_size=BATCH_SIZE,\n",
+    "                       shuffle=False, num_workers=0,worker_init_fn=seed_worker,generator=g)\n",
+    "\n",
+    "data_test_easy = DataLoader(dataset_tokenized[\"test_easy\"].with_format(\"torch\"), batch_size=BATCH_SIZE,\n",
+    "                            shuffle=False, num_workers=0,worker_init_fn=seed_worker,generator=g)\n",
+    "data_test_hard = DataLoader(dataset_tokenized[\"test_hard\"].with_format(\"torch\"), batch_size=BATCH_SIZE,\n",
+    "                            shuffle=False, num_workers=0,worker_init_fn=seed_worker,generator=g)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([  101,   231,  3890,   180,  5252,   346,   698,  2798,   222,  1695,\n",
+       "        18862,   170,   123,  9996,   171,  9329,  1788,   117,   146,  8802,\n",
+       "          171,  3771,  9394,  1580,   253,   123,   739, 18267,  2166,  2099,\n",
+       "          119,  1524,   260, 17871,   592,  3781,   171, 14985,  8856,   117,\n",
+       "         4745, 22288,   785,  1695,   171,  3482,  9014,  7835,   117,  2541,\n",
+       "          179,   420,   259, 13300,  6344,   230,  7411, 20400,  5403,  6834,\n",
+       "          214,   146,  1756, 11241,  9747, 22282,   180,  4964,   117,   122,\n",
+       "          179,  1369,  1089,  6646,   125,  3577,  5449,   179, 19864, 18862,\n",
+       "        22281,   170,   260,  5100,  3290,   171,   806,   117,  1904, 22281,\n",
+       "         6867,   532,  4228,   122, 19636, 22287,  2983, 12943,   210,   123])"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data_test.dataset[0]['input_ids'][:100]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -269,7 +348,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -283,13 +362,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "83f9f717921947638769bc9faeb04d13",
+       "model_id": "65acb39aa121419385c8218a35737eee",
        "version_major": 2,
        "version_minor": 0
       },
@@ -316,7 +395,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -334,7 +413,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -352,7 +431,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -376,13 +455,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e63c2f5973984898bac4856b06be9727",
+       "model_id": "cc6e005e13f74a8dbfdc6d641da35c27",
        "version_major": 2,
        "version_minor": 0
       },
@@ -452,7 +531,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "db591c2a25e44f4aaf1f1d78f294c273",
+       "model_id": "88bf7b83f89c42a39e4d833d8973cc4f",
        "version_major": 2,
        "version_minor": 0
       },
@@ -529,7 +608,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -538,7 +617,7 @@
        "'kamel-usp/aes_enem_models-sourceA-ordinal-from-bertimbau-base-C1'"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
