ensure determinism in dataset and loader

--- a/validate_models_inference.ipynb
+++ b/validate_models_inference.ipynb
@@ -58,9 +58,108 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "ae347415c10940be95188219c8bb64ea",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Downloading builder script:   0%|          | 0.00/25.4k [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "e690b000132e4605bd5d46d63eecc42a",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Downloading data files:   0%|          | 0/1 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "d3ce77a089774fca9c2c6975bcfa3179",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Extracting data files:   0%|          | 0/1 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "d018dfd600af422e877987912f2410cd",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Parsing HTML files from: sourceAWithGraders:   0%|          | 0/44 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "092e99b83322446fb86cdc8947187192",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Generating train split: 0 examples [00:00, ? examples/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "c039f1670a29499bb950a8d006639fb4",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Generating validation split: 0 examples [00:00, ? examples/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "1ab596e282e746b785b90a814e97e371",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Generating test split: 0 examples [00:00, ? examples/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
-    "dataset = load_dataset(\"kamel-usp/aes_enem_dataset\", \"sourceAWithGraders\", cache_dir=\"/tmp/aes_enem2\")"
+    "dataset = load_dataset(\"kamel-usp/aes_enem_dataset\", \"sourceAWithGraders\", cache_dir=\"/tmp/aes_enem\")"
    ]
   },
   {
@@ -74,15 +173,15 @@
        "DatasetDict({\n",
        "    train: Dataset({\n",
        "        features: ['id', 'id_prompt', 'essay_title', 'essay_text', 'grades', 'essay_year'],\n",
-       "        num_rows: 744\n",
+       "        num_rows: 738\n",
        "    })\n",
        "    validation: Dataset({\n",
        "        features: ['id', 'id_prompt', 'essay_title', 'essay_text', 'grades', 'essay_year'],\n",
-       "        num_rows: 195\n",
+       "        num_rows: 204\n",
        "    })\n",
        "    test: Dataset({\n",
        "        features: ['id', 'id_prompt', 'essay_title', 'essay_text', 'grades', 'essay_year'],\n",
-       "        num_rows: 216\n",
+       "        num_rows: 213\n",
        "    })\n",
        "})"
       ]
@@ -104,10 +203,10 @@
     {
      "data": {
       "text/plain": [
-       "{'id': '7.html',\n",
-       " 'id_prompt': 'patrimonio-historico-e-cultural-brasileiro-um-caso-de-descaso',\n",
-       " 'essay_title': 'Incêndio do Museu Histórico Nacional: a política de dominação secular',\n",
-       " 'essay_text': 'O Ministério da Cultura não está nem um pouco preocupado com a preservação do patrimônio público, o incêndio do Museu Histórico Nacional é a grande confirmação deste fato. Entre as 350 mil peças do vasto acervo, restou muito pouco do conhecimento científico existente, vai que entre os manuscritos tivesse uma árvore genealógica explicando o desenvolvimento psicomotor da criança, e que ali alguns professores de escolas públicas que estivessem preocupados com as questões sociais do país, levassem seus alunos e fizessem estes compreenderem a situação educacional do Brasil? Juntos, eles podem compreender que Componentes curriculares como a Educação física e a Artes e Educação são essenciais para a formação das crianças na Educação Infantil (0 a 5 anos e 11 meses), permitindo que os discentes tenham acesso à alfabetização. Descobrir que estes componentes curriculares trabalham as habilidades motoras básicas manipulativas (apanhar, lançar...) e locomotoras (correr, saltar...) que são fundamentais para a estruturação do corpo, pois a criança precisa ter a lateralidade (noção de lado direito e esquerdo, haja vista que, tanto a leitura, como a escrita, quanto o cálculo são realizados da esquerda para direita) estruturada, saber fazer a reversibilidade, ou seja, se colocar no ponto de vista do outro, no caso o caderno, para assim fazer a escrita, a leitura e o cálculo. Contudo isso, os professores e alunos da rede pública devem, de forma organizada, pedir a inclusão destes componentes curriculares na teoria e na prática, permitindo a emancipação de uma classe social que atualmente está sendo vítima de uma ordem social vigente, deixando estes como seres puramente biológicos e não sociais e culturais.',\n",
+       "{'id': '5.html',\n",
+       " 'id_prompt': 'o-brasil-paralisado-o-que-voce-pensa-sobre-a-greve-dos-caminhoneiros',\n",
+       " 'essay_title': 'O Brasil e seus conflitos',\n",
+       " 'essay_text': 'É de conhecimento geral que a notícia se espalha pelo Brasil inteiro, pois a manifestação está sendo falada em todo o território nacional. Com base nos conhecimentos os caminhoneiros estão reivindicando seus direitos. Em consequência disso, vê-se a todo instante reportagens que vem a julgar a manifestação, no entanto, dizem que os caminhoneiros estao causando desordem entre a população, nota-se qeos grevistas não estão apenas manifestando para si, e sim àqueles que não tiveram coragem de sair nas ruas a declarar sua indignação. Em todos os canais há notas de esclarecimento que devido a greve, está faltando remédios em hospitais, doadores, etc. Isso é praticamente um meio de não culpar os governantes e querem pôr culpa nos caminhoneiros. Em virtudes dos fatos mencionados, conclui-se que há uma esperança de vida melhor assim que a greve acabar.',\n",
        " 'grades': [0, 0, 0, 0, 0, 0],\n",
        " 'essay_year': 2018}"
       ]
@@ -125,7 +224,50 @@
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "a309c2863a404557a09c8673906748ee",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Map:   0%|          | 0/738 [00:00<?, ? examples/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "20eaf11937e74bb3a125167cef7fb1f5",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Map:   0%|          | 0/204 [00:00<?, ? examples/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "247de59cb0784560a654bc0bab941305",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Map:   0%|          | 0/213 [00:00<?, ? examples/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "grade_mapping = {\n",
     "    0: 0,\n",
@@ -279,36 +421,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "tensor([  101,   231,  3890,   180,  5252,   346,   698,  2798,   222,  1695,\n",
-       "        18862,   170,   123,  9996,   171,  9329,  1788,   117,   146,  8802,\n",
-       "          171,  3771,  9394,  1580,   253,   123,   739, 18267,  2166,  2099,\n",
-       "          119,  1524,   260, 17871,   592,  3781,   171, 14985,  8856,   117,\n",
-       "         4745, 22288,   785,  1695,   171,  3482,  9014,  7835,   117,  2541,\n",
-       "          179,   420,   259, 13300,  6344,   230,  7411, 20400,  5403,  6834,\n",
-       "          214,   146,  1756, 11241,  9747, 22282,   180,  4964,   117,   122,\n",
-       "          179,  1369,  1089,  6646,   125,  3577,  5449,   179, 19864, 18862,\n",
-       "        22281,   170,   260,  5100,  3290,   171,   806,   117,  1904, 22281,\n",
-       "         6867,   532,  4228,   122, 19636, 22287,  2983, 12943,   210,   123])"
-      ]
-     },
-     "execution_count": 17,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "data_test.dataset[0]['input_ids'][:100]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -348,7 +461,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -362,13 +475,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "65acb39aa121419385c8218a35737eee",
+       "model_id": "1b826cc7646b4f159579529f0d70d10c",
        "version_major": 2,
        "version_minor": 0
       },
@@ -383,7 +496,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy on the validation  set: 0.49\n"
+      "Accuracy on the validation  set: 0.53\n"
      ]
     }
    ],
@@ -395,14 +508,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "QWK on the validation set: 0.30\n"
+      "QWK on the validation set: 0.46\n"
      ]
     }
    ],
@@ -413,14 +526,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy on the validation set: 0.93\n"
+      "Accuracy on the validation set: 0.94\n"
      ]
     }
    ],
@@ -431,7 +544,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -455,13 +568,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "cc6e005e13f74a8dbfdc6d641da35c27",
+       "model_id": "7cf7cb7b50184029902a170947866843",
        "version_major": 2,
        "version_minor": 0
       },
@@ -508,10 +621,10 @@
        "      <td>kamel-usp/aes_enem_models-sourceA-ordinal-from...</td>\n",
        "      <td>full</td>\n",
        "      <td>0</td>\n",
-       "      <td>0.486111</td>\n",
-       "      <td>44.472214</td>\n",
-       "      <td>0.295411</td>\n",
-       "      <td>0.074074</td>\n",
+       "      <td>0.525822</td>\n",
+       "      <td>43.074343</td>\n",
+       "      <td>0.463946</td>\n",
+       "      <td>0.056338</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -522,7 +635,7 @@
        "0  kamel-usp/aes_enem_models-sourceA-ordinal-from...       full           0   \n",
        "\n",
        "   Accuracy       RMSE       QWK      HDIV  \n",
-       "0  0.486111  44.472214  0.295411  0.074074  "
+       "0  0.525822  43.074343  0.463946  0.056338  "
       ]
      },
      "metadata": {},
@@ -531,7 +644,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "88bf7b83f89c42a39e4d833d8973cc4f",
+       "model_id": "88eb5361c8644205913f62234f2d4a42",
        "version_major": 2,
        "version_minor": 0
       },
@@ -578,10 +691,10 @@
        "      <td>kamel-usp/aes_enem_models-sourceA-ordinal-from...</td>\n",
        "      <td>easy</td>\n",
        "      <td>0</td>\n",
-       "      <td>0.541667</td>\n",
-       "      <td>31.622777</td>\n",
-       "      <td>0.427347</td>\n",
-       "      <td>0.011905</td>\n",
+       "      <td>0.574713</td>\n",
+       "      <td>29.556103</td>\n",
+       "      <td>0.552396</td>\n",
+       "      <td>0.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -591,8 +704,8 @@
        "                                Experiment Reference Test Group  Competence  \\\n",
        "0  kamel-usp/aes_enem_models-sourceA-ordinal-from...       easy           0   \n",
        "\n",
-       "   Accuracy       RMSE       QWK      HDIV  \n",
-       "0  0.541667  31.622777  0.427347  0.011905  "
+       "   Accuracy       RMSE       QWK  HDIV  \n",
+       "0  0.574713  29.556103  0.552396   0.0  "
       ]
      },
      "metadata": {},
@@ -608,7 +721,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -617,7 +730,7 @@
        "'kamel-usp/aes_enem_models-sourceA-ordinal-from-bertimbau-base-C1'"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
